--- a/AuthServiceAPI/appsettings.json
+++ b/AuthServiceAPI/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AuthServiceDB;Username=postgres;Password=12345"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT_SECRET": "Test256Secret7BAF4DC88A4B81231231111"
 }
