--- a/AuthServiceAPI/appsettings.Development.json
+++ b/AuthServiceAPI/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=authservice-database-service;Port=5432;Database=auth;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "JWT_SECRET": "Test256Secret7BAF4DC88A4B81231231111"
 }
