--- a/AuthServiceAPI/appsettings.json
+++ b/AuthServiceAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=AuthServiceDB;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=authservice-database-service;Port=5432;Database=auth;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
